--- a/templates/hardening.conf.erb
+++ b/templates/hardening.conf.erb
@@ -5,8 +5,13 @@
 
 <Location / >
   <LimitExcept <%= Array(@allowed_http_methods).join(" ") %>> 
+    # http://httpd.apache.org/docs/2.4/upgrading.html
+    <% if @apache_version > '2.2' -%>
+    Require all granted
+    <% else -%>
     Order Allow,Deny 
     Deny from all 
+    <% end -%>
   </LimitExcept>
 </Location>
 
